unpackaged/main/default/objects/Privacy_Intervals__c/Privacy_Intervals__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Intervals to send privacy emails in hours</description>
    <label>Privacy Intervals</label>
</CustomObject>