unpackaged/main/default/objects/Privacy_Intervals__c/fields/CaseEscalationHours__c.field-meta.xml
<CustomField>
    <fullName>CaseEscalationHours__c</fullName>
    <description>The Number of Hours after confirmation that can pass until the privacy case is escalated</description>
    <label>CaseEscalationTime</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>