unpackaged/main/default/objects/Privacy_Intervals__c/fields/CSRReminderInterval__c.field-meta.xml
<CustomField>
    <fullName>CSRReminderInterval__c</fullName>
    <description>The number of hours between reminder emails sent to the CSR for privacy cases</description>
    <label>CSRReminderInterval</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>