unpackaged/main/default/objects/Privacy_Intervals__c/fields/hardCloseHours__c.field-meta.xml
<CustomField>
    <fullName>hardCloseHours__c</fullName>
    <description>Hours after resolving a privacy case that a case must be closed</description>
    <label>hardCloseHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>