unpackaged/main/default/objects/Privacy_Intervals__c/fields/MaxAfterConfirm__c.field-meta.xml
<CustomField>
    <fullName>MaxAfterConfirm__c</fullName>
    <description>The maximum number of hours that a privacy case can be open before resolution</description>
    <label>MaxAfterConfirm</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>