unpackaged/main/default/objects/Privacy_Intervals__c/fields/MaxBeforeConfirm__c.field-meta.xml
<CustomField>
    <fullName>MaxBeforeConfirm__c</fullName>
    <description>The maximum number of hours the user has to confirm their request before it is auto-closed</description>
    <label>MaxBeforeConfirm</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>