unpackaged/main/default/objects/Privacy_Intervals__c/fields/maxDataOwnerTime__c.field-meta.xml
<CustomField>
    <fullName>maxDataOwnerTime__c</fullName>
    <description>The amount of hours that the data owner has to complete their privacy task</description>
    <label>maxDataOwnerTime</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>