unpackaged/main/default/objects/Privacy_Intervals__c/fields/maxStalledHours__c.field-meta.xml
<CustomField>
    <fullName>maxStalledHours__c</fullName>
    <description>The Maximum Number of Hours that a case may be stalled in waiting for consumer response from CSR follow-up before automatically being closed</description>
    <label>maxStalledHours</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>