unpackaged/main/default/objects/Privacy_Intervals__c/fields/reminderDataOwnerInterval__c.field-meta.xml
<CustomField>
    <fullName>reminderDataOwnerInterval__c</fullName>
    <description>The Number of hours interval that an email reminder is sent to data owners</description>
    <label>reminderDataOwnerInterval</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>